--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,31 +1,29 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.bai1_30_10">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.App">
-
-        <!-- Main Activity -->
+        android:theme="@style/Theme.MobileAndroid"
+        tools:targetApi="31">
         <activity
             android:name=".MainActivity"
-            android:exported="true"> <!-- Required for activities with intent filters -->
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <!-- Additional Activities -->
-        <activity
-            android:name=".Bai1Activity"
-            android:exported="false" />
-        <activity
-            android:name=".Bai2Activity"
-            android:exported="false" />
+        <activity android:name=".BaiMotActivity" />
+        <activity android:name=".BaiHaiActivity" />
+        <activity android:name=".BaiBaActivity" />
     </application>
 
 </manifest>
